SERVER-77679 Skip starting LogicalSessionCacheReap thread when using recoverFromOplogAsStandalone=true

(cherry picked from commit 5c9e6404becc564d16857a869a5b5cb2e2bb0f1d)